{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "96ed67b7-a742-aa7c-7f29-fd518cdd677d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "yousra_template3-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7895037b5957b33",
            "domain": "vpc",
            "id": "eipalloc-0e7895037b5957b33",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-184-3.compute-1.amazonaws.com",
            "public_ip": "34.194.184.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yousra_template3-INSTANCE-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-0b94d163609a270ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b94d163609a270ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-090c233633443d353",
            "private_dns": "ip-10-0-2-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-048be5f8150491ac3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031abf6e9c08d8b37",
            "tags": {
              "Name": "yousra_template3-INSTANCE-PRIVATE"
            },
            "tags_all": {
              "Name": "yousra_template3-INSTANCE-PRIVATE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0105f9ccf6c692b6c"
            ]
          },
          "dependencies": [
            "aws_security_group.yousra_template3-SG-PRIVATE",
            "aws_security_group.yousra_template3-SG-PUBLIC",
            "aws_subnet.yousra_template3-SUBNET-PRIVATE",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yousra_template3-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-020ce449652304f0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020ce449652304f0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00817425fc6a92d78",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_ip": "44.211.236.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e007c4ed9e033032",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b623116f646ce478",
            "tags": {
              "Name": "yousra_template3-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "yousra_template3-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0348fada6b21185ab"
            ]
          },
          "dependencies": [
            "aws_instance.yousra_template3-INSTANCE-PRIVATE",
            "aws_security_group.yousra_template3-SG-PRIVATE",
            "aws_security_group.yousra_template3-SG-PUBLIC",
            "aws_subnet.yousra_template3-SUBNET-PRIVATE",
            "aws_subnet.yousra_template3-SUBNET-PUBLIC",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "yousra_template3-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:internet-gateway/igw-091dd25b2edbe62f1",
            "id": "igw-091dd25b2edbe62f1",
            "owner_id": "055574845309",
            "tags": {
              "Name": "yousra_template3-IGW"
            },
            "tags_all": {
              "Name": "yousra_template3-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "yousra_template3-NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7895037b5957b33",
            "association_id": "eipassoc-0e2197f9246c9ba07",
            "connectivity_type": "public",
            "id": "nat-092260cfc5105c1a6",
            "network_interface_id": "eni-04c48719f79548cda",
            "private_ip": "10.0.1.51",
            "public_ip": "34.194.184.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b623116f646ce478",
            "tags": {
              "Name": "yousra_template3-NATGW"
            },
            "tags_all": {
              "Name": "yousra_template3-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.yousra_template3-EIP",
            "aws_subnet.yousra_template3-SUBNET-PUBLIC",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yousra_template3-RTB-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-01ec5e3082e7d0683",
            "id": "rtb-01ec5e3082e7d0683",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-092260cfc5105c1a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yousra_template3.RTB-PRIVATE"
            },
            "tags_all": {
              "Name": "yousra_template3.RTB-PRIVATE"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c5f7667623e9378"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.yousra_template3-EIP",
            "aws_nat_gateway.yousra_template3-NATGW",
            "aws_subnet.yousra_template3-SUBNET-PUBLIC",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yousra_template3-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-0e59bb930a714b886",
            "id": "rtb-0e59bb930a714b886",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091dd25b2edbe62f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yousra_template3-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "yousra_template3-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c5f7667623e9378"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.yousra_template3-IGW",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "yousra_template3-RTB-PRIVATE-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0824edbf6bbd6c7ce",
            "route_table_id": "rtb-01ec5e3082e7d0683",
            "subnet_id": "subnet-031abf6e9c08d8b37"
          },
          "dependencies": [
            "aws_eip.yousra_template3-EIP",
            "aws_nat_gateway.yousra_template3-NATGW",
            "aws_route_table.yousra_template3-RTB-PRIVATE",
            "aws_subnet.yousra_template3-SUBNET-PRIVATE",
            "aws_subnet.yousra_template3-SUBNET-PUBLIC",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "yousra_template3-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eae832a3a9ab3d09",
            "route_table_id": "rtb-0e59bb930a714b886",
            "subnet_id": "subnet-0b623116f646ce478"
          },
          "dependencies": [
            "aws_internet_gateway.yousra_template3-IGW",
            "aws_route_table.yousra_template3-RTB-PUBLIC",
            "aws_subnet.yousra_template3-SUBNET-PUBLIC",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yousra_template3-SG-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0105f9ccf6c692b6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0105f9ccf6c692b6c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0348fada6b21185ab"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922091857610100000003",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yousra_template3-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "yousra_template3-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c5f7667623e9378"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.yousra_template3-SG-PUBLIC",
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yousra_template3-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0348fada6b21185ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0348fada6b21185ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922091853612200000001",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yousra_template3-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "yousra_template3-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c5f7667623e9378"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "yousra_template3-SUBNET-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-031abf6e9c08d8b37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031abf6e9c08d8b37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yousra_template3-SUBNET-PRIVATE"
            },
            "tags_all": {
              "Name": "yousra_template3-SUBNET-PRIVATE"
            },
            "vpc_id": "vpc-03c5f7667623e9378"
          },
          "dependencies": [
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "yousra_template3-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-0b623116f646ce478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b623116f646ce478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yousra_template3-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "yousra_template3-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-03c5f7667623e9378"
          },
          "dependencies": [
            "aws_vpc.yousra_template3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "yousra_template3-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:vpc/vpc-03c5f7667623e9378",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0811547511a2451db",
            "default_route_table_id": "rtb-0d89c8f4d3ce1f632",
            "default_security_group_id": "sg-03cc0708e6e76185b",
            "dhcp_options_id": "dopt-062c172c5a4285b27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c5f7667623e9378",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d89c8f4d3ce1f632",
            "owner_id": "055574845309",
            "tags": {
              "Name": "yousra_template3-VPC"
            },
            "tags_all": {
              "Name": "yousra_template3-VPC"
            }
          }
        }
      ]
    }
  ]
}